--- a/calculator.css
+++ b/calculator.css
@@ -15,9 +15,10 @@
 /* Display */
 .display {
 	background-color: #bfc4ce;
-	width: relative;
+	width: 220px;
+	position: relative;
 	left: 15px;
-	top:20px;
+	top: 20px;
 	height: 40px;
 }
 .display input {
@@ -46,6 +47,12 @@
 	cursor: pointer;
 	border-top: 2px solid transparent;
 }
+.button.function {
+	color: white;
+	background-color: #c64f81;
+	border-bottom: black 2px solid;
+	border-top: 2px #6f6f6f solid;
+}
 .button.operator {
 	color: white;
 	background-color: #4d5966;
@@ -56,17 +63,17 @@
 	color: white;
 	background-color: #7091ab;
 	border-bottom: black 2px solid;
+	border-top: 2px #6f6f6f solid;
 }
 
 /* Simulate Button Press */
-
 .function:active {
 	border-top: black 2px solid;
 	border-bottom: 2px #6f6f6f solid;
 }
 .operator:active {
 	border-top: black 2px solid;
-	border-bottom:#303030 2px solid;
+	border-bottom: 2px #303030 solid;
 }
 .number:active {
 	border-top: black 2px solid;
